--- a/package.json
+++ b/package.json
@@ -9,14 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^1.0.0-beta.12",
     "@types/node": "18.15.11",
     "@types/react": "18.0.34",
     "@types/react-dom": "18.0.11",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "geolib": "^3.3.3",
+    "leaflet": "^1.9.3",
     "next": "13.3.0",
+    "pako": "^2.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.4"
+    "react-leaflet": "^4.2.1",
+    "togpx": "^0.5.4",
+    "typescript": "5.0.4",
+    "xml2js": "^0.5.0"
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.9.3",
+    "@types/pako": "^2.0.0",
+    "@types/xml2js": "^0.4.11"
   }
 }
